syntax = "proto3";

package hashicorp.consul.auth.v2beta1;

import "pbresource/annotations.proto";

message WorkloadIdentity {
  option (hashicorp.consul.resource.spec) = {scope: SCOPE_NAMESPACE};
}
